# box-sim

./: .gitignore  README.md  Snake2Box.ipynb  box.py  box_old.py  box_older.py  clickplot.py  main.py  option_tree.py  out.txt  puzzle.py  pyproject.toml  snake.py  utils.py
