[tool.poetry]
name = "box_sim"
version = "0.1.0"
description = "Solve Snake2Box puzzle"
authors = ["Snir <bachar.snir@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
argparse = "^1.4.0"
networkx = "^2.6.3"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
